fix: 修復maven build遇到的版號問題、springBoot3 與 lombok 最低支援: 3.1.4 以上版本