@@ -4,13 +4,12 @@ import com.alibaba.excel.metadata.Head;
 import com.alibaba.excel.write.handler.CellWriteHandler;
 import com.alibaba.excel.write.metadata.holder.WriteSheetHolder;
 import com.alibaba.excel.write.metadata.holder.WriteTableHolder;
-import com.baomidou.mybatisplus.core.toolkit.CollectionUtils;
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.poi.ss.usermodel.Row;
 import org.springframework.context.MessageSource;
 
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 public class I18nCellWriteHandler implements CellWriteHandler {
 
@@ -25,14 +24,13 @@ public class I18nCellWriteHandler implements CellWriteHandler {
 
     @Override
     public void beforeCellCreate(WriteSheetHolder writeSheetHolder, WriteTableHolder writeTableHolder, Row row, Head head, Integer columnIndex, Integer relativeRowIndex, Boolean isHead) {
-        if (isHead) {
+        if (Boolean.TRUE.equals(isHead)) {
             List<String> originHeadNames = head.getHeadNameList();
             if (CollectionUtils.isNotEmpty(originHeadNames)) {
-                List<String> newHeadNames = originHeadNames.stream().
-                        map(headName ->
-                                PlaceholderResolver.getDefaultResolver().resolveByRule(headName,
-                                        (name) -> messageSource.getMessage(name, null, locale))).
-                        collect(Collectors.toList());
+                List<String> newHeadNames = originHeadNames.stream()
+                        .map(headName -> PlaceholderResolver.getDefaultResolver()
+                                .resolveByRule(headName, (name) -> messageSource.getMessage(name, null, locale)))
+                        .toList();
                 head.setHeadNameList(newHeadNames);
             }
         }
